--- a/configuration/settings.json
+++ b/configuration/settings.json
@@ -3,11 +3,10 @@
     "admins": [908954867962380298],
     "xp_scale": 25000,
     "max_luck_strength": 0.25,
-    "potion_exponent_factor": 0.06
-    ,
+    "potion_exponent_factor": 0.06,
     "weather_events": [],
     "weather_event_min_interval_minutes": 30,
     "weather_event_max_interval_minutes": 60,
     "weather_event_duration_minutes": 15,
-    "announcement_channel": null
+    "announcement_channel": [1443664433632116912]
 }
